Updated .env example to include OAuth2 creds

--- a/emailHandler/.env.example
+++ b/emailHandler/.env.example
@@ -1,2 +1,4 @@
 USERNAME='user@gmail.com'
 PASS='password'
+CLIENT_ID='123456789-LONG_FUCKIN_ID.apps.googleusercontent.com'
+CLIENT_SECRET='NO_SECRETS_ALLOWED_MOTHERFUCKERS'
